--- a/index.html
+++ b/index.html
@@ -1,104 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <!-- Bootstrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-        <title>Capacity Calculator</title>
-    </head>
-    <body class="container">
-        <form>
-            <div class="row mb-3">
-                <label for="full-capacity" class="col-sm-2 col-form-label">Full Capacity:</label>
-                <div class="col-sm-2">
-                    <input type="number" class="form-control" id="full-capacity" value="39" />
-                </div>
-            </div>
-            <div class="row mb-3">
-                <label for="engineers" class="col-sm-2 col-form-label">Engineers:</label>
-                <div class="col-sm-2">
-                    <input type="number" class="form-control" id="engineers" value="6" />
-                </div>
-            </div>
-            <div class="row mb-3">
-                <label for="days-off" class="col-sm-2 col-form-label">Days-off:</label>
-                <div class="col-sm-2">
-                    <input type="number" class="form-control" id="days-off" value="0" />
-                </div>
-            </div>
-            <button type="button" class="btn btn-primary" onclick="javascript:calculate()">
-                Calculate
-            </button>
-            <br />
-            <br />
-            <span>
-                Coming sprint max capacity: <strong><span id="comingSprintCapacity">0</span></strong> points.
-            </span>
-            <br />
-            <br />
-            <span><strong>Feature points</strong></span>
-            <br />
-            <span>
-                min: <strong><span id="featureMin">0</span></strong>
-            </span>
-            <br />
-            <span>
-                max: <strong><span id="featureMax">0</span></strong>
-            </span>
-            <br />
-            <span>
-                avg: <strong><span id="featureAvg">0</span></strong>
-            </span>
-            <br />
-            <br />
-            <span><strong>Technical points</strong></span>
-            <br />
-            <span>
-                min: <strong><span id="technicalMin">0</span></strong>
-            </span>
-            <br />
-            <span>
-                max: <strong><span id="technicalMax">0</span></strong>
-            </span>
-            <br />
-            <span>
-                avg: <strong><span id="technicalAvg">0</span></strong>
-            </span>
-        </form>
-        <script>
-            var fullCapacity, engineersNumber, daysOff;
-            function calculate() {
-                const fullCapacity = new Number(document.getElementById("full-capacity").value);
-                const engineers = new Number(document.getElementById("engineers").value);
-                const daysOff = new Number(document.getElementById("days-off").value);
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <title>Capacity Calculator</title>
+  </head>
+  <body class="container">
+    <form>
+      <div class="row mb-3">
+        <label for="full-capacity" class="col-sm-2 col-form-label"
+          >Full Capacity:</label
+        >
+        <div class="col-sm-2">
+          <input type="number" class="form-control" id="full-capacity" />
+        </div>
+      </div>
+      <div class="row mb-3">
+        <label for="engineers" class="col-sm-2 col-form-label"
+          >Engineers:</label
+        >
+        <div class="col-sm-2">
+          <input type="number" class="form-control" id="engineers" />
+        </div>
+      </div>
+      <div class="row mb-3">
+        <label for="days-off" class="col-sm-2 col-form-label">Days-off:</label>
+        <div class="col-sm-2">
+          <input type="number" class="form-control" id="days-off" />
+        </div>
+      </div>
+      <button
+        type="button"
+        class="btn btn-primary"
+        onclick="javascript:calculate()"
+      >
+        Calculate
+      </button>
+      <br />
+      <br />
+      <span>
+        Coming sprint max capacity:
+        <strong><span id="comingSprintCapacity">0</span></strong> points.
+      </span>
+      <br />
+      <br />
+      <span><strong>Feature points</strong></span>
+      <br />
+      <span>
+        min: <strong><span id="featureMin">0</span></strong>
+      </span>
+      <br />
+      <span>
+        max: <strong><span id="featureMax">0</span></strong>
+      </span>
+      <br />
+      <span>
+        avg: <strong><span id="featureAvg">0</span></strong>
+      </span>
+      <br />
+      <br />
+      <span><strong>Technical points</strong></span>
+      <br />
+      <span>
+        min: <strong><span id="technicalMin">0</span></strong>
+      </span>
+      <br />
+      <span>
+        max: <strong><span id="technicalMax">0</span></strong>
+      </span>
+      <br />
+      <span>
+        avg: <strong><span id="technicalAvg">0</span></strong>
+      </span>
+    </form>
+    <script>
+      function getPreset() {
+        const urlParams = new URLSearchParams(window.location.search);
+        return {
+          fullCapacity: urlParams.get("full-capacity") || 0,
+          engineers: urlParams.get("engineers") || 0,
+          daysOff: urlParams.get("days-off") || 0,
+        };
+      }
+      function calculate() {
+        const fullCapacity = new Number(
+          document.getElementById("full-capacity").value
+        );
+        const engineers = new Number(
+          document.getElementById("engineers").value
+        );
+        const daysOff = new Number(document.getElementById("days-off").value);
 
-                try {
-                    var totalComingSprintCapacity = calculateTotalCapacity(fullCapacity, engineers, daysOff);
-                    document.getElementById("comingSprintCapacity").innerHTML = totalComingSprintCapacity;
-                  
-                    document.getElementById("featureMin").innerHTML = Math.floor(totalComingSprintCapacity * 0.55);
-                    document.getElementById("featureMax").innerHTML = Math.floor(totalComingSprintCapacity * 0.7);
-                    document.getElementById("featureAvg").innerHTML = Math.floor((totalComingSprintCapacity * 0.7 + totalComingSprintCapacity * 0.55) / 2);
-                    document.getElementById("technicalMin").innerHTML = Math.floor(totalComingSprintCapacity * 0.3);
-                    document.getElementById("technicalMax").innerHTML = Math.floor(totalComingSprintCapacity * 0.45);
-                    document.getElementById("technicalAvg").innerHTML = Math.floor((totalComingSprintCapacity * 0.3 + totalComingSprintCapacity * 0.45) / 2);
-                } catch (error) {
-                    document.getElementById("comingSprintCapacity").innerHTML = 0;
-                    document.getElementById("featureMin").innerHTML = 0;
-                    document.getElementById("featureMax").innerHTML = 0;
-                    document.getElementById("featureAvg").innerHTML = 0;
-                    document.getElementById("technicalMin").innerHTML = 0;
-                    document.getElementById("technicalMax").innerHTML = 0;
-                    document.getElementById("technicalAvg").innerHTML = 0;
-                }
-            }
+        try {
+          var totalComingSprintCapacity = calculateTotalCapacity(
+            fullCapacity,
+            engineers,
+            daysOff
+          );
+          document.getElementById("comingSprintCapacity").innerHTML =
+            totalComingSprintCapacity;
 
-            function calculateTotalCapacity(fullCapacity, engineersNumber, daysOff) {
-                var totalDays = engineersNumber * 10;
-                return Math.floor(fullCapacity * ((totalDays - daysOff) / totalDays));
-            }
-        </script>
-    </body>
+          document.getElementById("featureMin").innerHTML = Math.floor(
+            totalComingSprintCapacity * 0.55
+          );
+          document.getElementById("featureMax").innerHTML = Math.floor(
+            totalComingSprintCapacity * 0.7
+          );
+          document.getElementById("featureAvg").innerHTML = Math.floor(
+            (totalComingSprintCapacity * 0.7 +
+              totalComingSprintCapacity * 0.55) /
+              2
+          );
+          document.getElementById("technicalMin").innerHTML = Math.floor(
+            totalComingSprintCapacity * 0.3
+          );
+          document.getElementById("technicalMax").innerHTML = Math.floor(
+            totalComingSprintCapacity * 0.45
+          );
+          document.getElementById("technicalAvg").innerHTML = Math.floor(
+            (totalComingSprintCapacity * 0.3 +
+              totalComingSprintCapacity * 0.45) /
+              2
+          );
+        } catch (error) {
+          document.getElementById("comingSprintCapacity").innerHTML = 0;
+          document.getElementById("featureMin").innerHTML = 0;
+          document.getElementById("featureMax").innerHTML = 0;
+          document.getElementById("featureAvg").innerHTML = 0;
+          document.getElementById("technicalMin").innerHTML = 0;
+          document.getElementById("technicalMax").innerHTML = 0;
+          document.getElementById("technicalAvg").innerHTML = 0;
+        }
+      }
+
+      function calculateTotalCapacity(fullCapacity, engineersNumber, daysOff) {
+        var totalDays = engineersNumber * 10;
+        return Math.floor(fullCapacity * ((totalDays - daysOff) / totalDays));
+      }
+
+      const presets = getPreset();
+      document.getElementById("full-capacity").value = presets.fullCapacity;
+      document.getElementById("days-off").value = presets.daysOff;
+      document.getElementById("engineers").value = presets.engineers;
+    </script>
+  </body>
 </html>
