--- a/index.html
+++ b/index.html
@@ -1,171 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- The page supports both dark and light color schemes,
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- The page supports both dark and light color schemes,
          and the page author prefers / default is light. -->
-    <meta name="color-scheme" content="light dark" />
+  <meta name="color-scheme" content="light dark" />
 
-    <!-- Replace the Bootstrap CSS with the
+  <!-- Replace the Bootstrap CSS with the
          Bootstrap-Dark Variant CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-dark.min.css"
-      rel="stylesheet"
-    />
-    <title>Capacity Calculator</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-dark.min.css" rel="stylesheet" />
+  <title>Capacity Calculator</title>
 
-    <!-- Optional Meta Theme Color is also supported on Safari and Chrome -->
-    <meta
-      name="theme-color"
-      content="#111111"
-      media="(prefers-color-scheme: light)"
-    />
-    <meta
-      name="theme-color"
-      content="#eeeeee"
-      media="(prefers-color-scheme: dark)"
-    />
-  </head>
-  <body class="container dark">
-    <form>
-      <div class="row mb-3">
-        <label for="full-capacity" class="col-sm-2 col-form-label"
-          >Full Capacity:</label
-        >
-        <div class="col-sm-2">
-          <input type="number" class="form-control" id="full-capacity" />
-        </div>
+  <!-- Optional Meta Theme Color is also supported on Safari and Chrome -->
+  <meta name="theme-color" content="#111111" media="(prefers-color-scheme: light)" />
+  <meta name="theme-color" content="#eeeeee" media="(prefers-color-scheme: dark)" />
+</head>
+
+<body class="container dark">
+  <form>
+    <div class="row mb-3">
+      <label for="full-capacity" class="col-sm-2 col-form-label">Full Capacity:</label>
+      <div class="col-sm-2">
+        <input type="number" class="form-control" id="full-capacity" />
       </div>
-      <div class="row mb-3">
-        <label for="engineers" class="col-sm-2 col-form-label"
-          >Engineers:</label
-        >
-        <div class="col-sm-2">
-          <input type="number" class="form-control" id="engineers" />
-        </div>
+    </div>
+    <div class="row mb-3">
+      <label for="engineers" class="col-sm-2 col-form-label">Engineers:</label>
+      <div class="col-sm-2">
+        <input type="number" class="form-control" id="engineers" />
       </div>
-      <div class="row mb-3">
-        <label for="days-off" class="col-sm-2 col-form-label">Days-off:</label>
-        <div class="col-sm-2">
-          <input type="number" class="form-control" id="days-off" />
-        </div>
+    </div>
+    <div class="row mb-3">
+      <label for="days-off" class="col-sm-2 col-form-label">Days-off:</label>
+      <div class="col-sm-2">
+        <input type="number" class="form-control" id="days-off" />
       </div>
-      <button
-        type="button"
-        class="btn btn-primary"
-        onclick="javascript:calculate()"
-      >
-        Calculate
-      </button>
-      <br />
-      <br />
-      <span>
-        Coming sprint max capacity:
-        <strong><span id="comingSprintCapacity">0</span></strong> points.
-      </span>
-      <br />
-      <br />
-      <span><strong>Feature points</strong></span>
-      <br />
-      <span>
-        min: <strong><span id="featureMin">0</span></strong>
-      </span>
-      <br />
-      <span>
-        max: <strong><span id="featureMax">0</span></strong>
-      </span>
-      <br />
-      <span>
-        avg: <strong><span id="featureAvg">0</span></strong>
-      </span>
-      <br />
-      <br />
-      <span><strong>Technical points</strong></span>
-      <br />
-      <span>
-        min: <strong><span id="technicalMin">0</span></strong>
-      </span>
-      <br />
-      <span>
-        max: <strong><span id="technicalMax">0</span></strong>
-      </span>
-      <br />
-      <span>
-        avg: <strong><span id="technicalAvg">0</span></strong>
-      </span>
-    </form>
-    <script>
-      function getPreset() {
-        const urlParams = new URLSearchParams(window.location.search);
-        return {
-          fullCapacity: urlParams.get("full-capacity") || 0,
-          engineers: urlParams.get("engineers") || 0,
-          daysOff: urlParams.get("days-off") || 0,
-        };
-      }
-      function calculate() {
-        const fullCapacity = new Number(
-          document.getElementById("full-capacity").value
+    </div>
+    <input type="hidden" id="sprint-length" />
+    <button type="button" class="btn btn-primary" onclick="javascript:calculate()">
+      Calculate
+    </button>
+    <br />
+    <br />
+    <span>
+      Coming sprint max capacity:
+      <strong><span id="comingSprintCapacity">0</span></strong> points.
+    </span>
+    <br />
+    <br />
+    <span><strong>Feature points</strong></span>
+    <br />
+    <span>
+      min: <strong><span id="featureMin">0</span></strong>
+    </span>
+    <br />
+    <span>
+      max: <strong><span id="featureMax">0</span></strong>
+    </span>
+    <br />
+    <span>
+      avg: <strong><span id="featureAvg">0</span></strong>
+    </span>
+    <br />
+    <br />
+    <span><strong>Technical points</strong></span>
+    <br />
+    <span>
+      min: <strong><span id="technicalMin">0</span></strong>
+    </span>
+    <br />
+    <span>
+      max: <strong><span id="technicalMax">0</span></strong>
+    </span>
+    <br />
+    <span>
+      avg: <strong><span id="technicalAvg">0</span></strong>
+    </span>
+  </form>
+  <script>
+    function getPreset() {
+      const urlParams = new URLSearchParams(window.location.search);
+      return {
+        fullCapacity: urlParams.get("full-capacity") || 0,
+        engineers: urlParams.get("engineers") || 0,
+        daysOff: urlParams.get("days-off") || 0,
+        sprintLength: urlParams.get("sprint-length") || 10,
+      };
+    }
+    function calculate() {
+      const fullCapacity = new Number(document.getElementById("full-capacity").value);
+      const engineers = new Number(document.getElementById("engineers").value);
+      const daysOff = new Number(document.getElementById("days-off").value);
+      const sprintLength = new Number(document.getElementById("sprint-length").value);
+
+      try {
+        var totalComingSprintCapacity = calculateTotalCapacity(
+          fullCapacity,
+          engineers,
+          daysOff,
+          sprintLength
         );
-        const engineers = new Number(
-          document.getElementById("engineers").value
+        document.getElementById("comingSprintCapacity").innerHTML =
+          totalComingSprintCapacity;
+
+        document.getElementById("featureMin").innerHTML = Math.floor(
+          totalComingSprintCapacity * 0.55
         );
-        const daysOff = new Number(document.getElementById("days-off").value);
-
-        try {
-          var totalComingSprintCapacity = calculateTotalCapacity(
-            fullCapacity,
-            engineers,
-            daysOff
-          );
-          document.getElementById("comingSprintCapacity").innerHTML =
-            totalComingSprintCapacity;
-
-          document.getElementById("featureMin").innerHTML = Math.floor(
-            totalComingSprintCapacity * 0.55
-          );
-          document.getElementById("featureMax").innerHTML = Math.floor(
-            totalComingSprintCapacity * 0.7
-          );
-          document.getElementById("featureAvg").innerHTML = Math.floor(
-            (totalComingSprintCapacity * 0.7 +
-              totalComingSprintCapacity * 0.55) /
-              2
-          );
-          document.getElementById("technicalMin").innerHTML = Math.floor(
-            totalComingSprintCapacity * 0.3
-          );
-          document.getElementById("technicalMax").innerHTML = Math.floor(
-            totalComingSprintCapacity * 0.45
-          );
-          document.getElementById("technicalAvg").innerHTML = Math.floor(
-            (totalComingSprintCapacity * 0.3 +
-              totalComingSprintCapacity * 0.45) /
-              2
-          );
-        } catch (error) {
-          document.getElementById("comingSprintCapacity").innerHTML = 0;
-          document.getElementById("featureMin").innerHTML = 0;
-          document.getElementById("featureMax").innerHTML = 0;
-          document.getElementById("featureAvg").innerHTML = 0;
-          document.getElementById("technicalMin").innerHTML = 0;
-          document.getElementById("technicalMax").innerHTML = 0;
-          document.getElementById("technicalAvg").innerHTML = 0;
-        }
+        document.getElementById("featureMax").innerHTML = Math.floor(
+          totalComingSprintCapacity * 0.7
+        );
+        document.getElementById("featureAvg").innerHTML = Math.floor(
+          (totalComingSprintCapacity * 0.7 +
+            totalComingSprintCapacity * 0.55) /
+          2
+        );
+        document.getElementById("technicalMin").innerHTML = Math.floor(
+          totalComingSprintCapacity * 0.3
+        );
+        document.getElementById("technicalMax").innerHTML = Math.floor(
+          totalComingSprintCapacity * 0.45
+        );
+        document.getElementById("technicalAvg").innerHTML = Math.floor(
+          (totalComingSprintCapacity * 0.3 +
+            totalComingSprintCapacity * 0.45) /
+          2
+        );
+      } catch (error) {
+        document.getElementById("comingSprintCapacity").innerHTML = 0;
+        document.getElementById("featureMin").innerHTML = 0;
+        document.getElementById("featureMax").innerHTML = 0;
+        document.getElementById("featureAvg").innerHTML = 0;
+        document.getElementById("technicalMin").innerHTML = 0;
+        document.getElementById("technicalMax").innerHTML = 0;
+        document.getElementById("technicalAvg").innerHTML = 0;
       }
+    }
 
-      function calculateTotalCapacity(fullCapacity, engineersNumber, daysOff) {
-        var totalDays = engineersNumber * 10;
-        return Math.floor(fullCapacity * ((totalDays - daysOff) / totalDays));
-      }
+    function calculateTotalCapacity(fullCapacity, engineersNumber, daysOff, sprintLength) {
+      var totalDays = engineersNumber * sprintLength;
+      return Math.floor(fullCapacity * ((totalDays - daysOff) / totalDays));
+    }
 
-      const presets = getPreset();
-      document.getElementById("full-capacity").value = presets.fullCapacity;
-      document.getElementById("days-off").value = presets.daysOff;
-      document.getElementById("engineers").value = presets.engineers;
-    </script>
-  </body>
+    const presets = getPreset();
+    document.getElementById("full-capacity").value = presets.fullCapacity;
+    document.getElementById("days-off").value = presets.daysOff;
+    document.getElementById("engineers").value = presets.engineers;
+    document.getElementById("sprint-length").value = presets.sprintLength;
+  </script>
+</body>
+
 </html>
